--- a/MovieTime/MainWindow.xaml
+++ b/MovieTime/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
       <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
-        Hello Wpf!!
+        Movie Time
       </TextBlock>
         
     </Grid>
