--- a/MovieTime/MainWindow.xaml
+++ b/MovieTime/MainWindow.xaml
@@ -5,11 +5,151 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MovieTime"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-      <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72">
-        Movie Time
-      </TextBlock>
+        Title="MovieTime" Height="800" Width="Auto" WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+
+        <Style TargetType="{x:Type Button}">
+
+            <Setter Property="Foreground" Value="#FFFFFF"/>
+            <Setter Property="Background" Value="#141414"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderThickness="0">
+                            <ContentPresenter  VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FFC200"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        
+
+        <Style x:Key="placeHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Grid>
+                            <TextBox Text="{Binding Path=Text,
+                                                RelativeSource={RelativeSource TemplatedParent}, 
+                                                Mode=TwoWay,
+                                                UpdateSourceTrigger=PropertyChanged}"
+                                 x:Name="textSource" 
+                                 Background="Transparent" 
+                                 Foreground="#FFFFFF"
+                                 BorderBrush="#141414"
+                                 
+                                     BorderThickness="0"
+                                 Panel.ZIndex="2" />
+                            <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}" Panel.ZIndex="1">
+                                <TextBox.Style>
+                                    <Style TargetType="{x:Type TextBox}">
+                                        <Setter Property="Foreground" Value="Transparent"/>
+                                        <Setter Property="BorderBrush" Value="#141414"/>
+
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Path=Text, Source={x:Reference textSource}}" Value="">
+                                                <Setter Property="Foreground" Value="LightGray"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </TextBox.Style>
+                            </TextBox>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <Grid Background="#141414">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="2" />
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="190"/>
+            <RowDefinition Height="60" />
+            
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        
+            <StackPanel Grid.Column="0" Grid.RowSpan="3" Margin="0,0,0,0.4" >
+                <StackPanel Height="190" >
+                <StackPanel HorizontalAlignment="Center" Height="81" Margin="0,55,0,55" >
+                        <Image Source="Images/film-solid.png" Width="86" Height="60"/>
+                        <Label FontSize="14" Foreground="#FFC200" BorderBrush="#141414" Content="MovieTime" Background="#141414" Height="30" HorizontalContentAlignment="Center"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel>
+                    <Button Height="60" FontSize="20" Foreground="White" Name="Button1" Click="Wyszukiwarka_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Images/grin-squint-tears-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
+                            <TextBlock Text="Wyszukiwarka" />
+                        </StackPanel>
+                    </Button>
+
+                    <Button  Height="60" FontSize="20" Foreground="White" Click="Top500_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Images/chart-bar-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
+                            <TextBlock Text="Top 500"/>
+                        </StackPanel>
+                    </Button>
+
+                    <Button Height="60" FontSize="20" Foreground="White" Click="News_Click" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Images/newspaper-regular.png" Height="30px" Width="30px" Margin="20,0,28,0" />
+                            <TextBlock Text="News"/>
+                        </StackPanel>
+                    </Button>
+                    <Button Height="60" FontSize="20" Foreground="White" Click="Komedie_Click" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="Images/grin-squint-tears-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
+                            <TextBlock Text="Komedie" />
+
+                        </StackPanel>
+
+                    </Button>
+                </StackPanel>   
+
+
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.RowSpan="3" Background="#FFC200" Width="2"/>
+
+
+
+        <StackPanel Grid.Column="3" Grid.Row="0" Margin="15" VerticalAlignment="Center" MaxWidth="500" Height="60">
+            <Border BorderThickness="2" BorderBrush="#FFFFFF" CornerRadius="5">
+                <DockPanel >
+                    
+                    <TextBox Style="{StaticResource placeHolder}" Tag="Szukaj..." Name="txtSearch" FontSize="22" Foreground="#FFFFFF" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Margin="12" KeyDown="txtSearch_KeyDown" />
+
+                    
+                        <Button DockPanel.Dock="Right" Height="Auto" Width="49" HorizontalAlignment="Right" Click="Search_Click">
+                            <Image x:Name="iIcon3" Width="30px" Height="30px" Margin="0, 1, 3, 1" Source="Images/grin-squint-tears-regular.png" VerticalAlignment="Center">
+
+                                
+                            </Image>
+                        </Button>
+                    
+                </DockPanel>
+            </Border>
+        </StackPanel>
+
+        <StackPanel Grid.Column="3" Grid.Row="1">
+            <Label Name="MainLabel" FontSize="22" Foreground="#FFC200"></Label>
+        </StackPanel>
+
         
     </Grid>
+    
 </Window>
