New menu, working hover, working active element

--- a/MovieTime/MainWindow.xaml
+++ b/MovieTime/MainWindow.xaml
@@ -89,36 +89,89 @@
                         <Label FontSize="14" Foreground="#FFC200" BorderBrush="#141414" Content="MovieTime" Background="#141414" Height="30" HorizontalContentAlignment="Center"/>
                     </StackPanel>
                 </StackPanel>
-                <StackPanel>
-                    <Button Height="60" FontSize="20" Foreground="White" Name="Button1" Click="Wyszukiwarka_Click">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="Images/grin-squint-tears-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
-                            <TextBlock Text="Wyszukiwarka" />
-                        </StackPanel>
-                    </Button>
+            <ListBox Name="listbox1" Grid.Row="0" HorizontalContentAlignment="Left" Width="300" BorderThickness="0" Background="#141414">
 
-                    <Button  Height="60" FontSize="20" Foreground="White" Click="Top500_Click">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="Images/chart-bar-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
-                            <TextBlock Text="Top 500"/>
-                        </StackPanel>
-                    </Button>
 
-                    <Button Height="60" FontSize="20" Foreground="White" Click="News_Click" >
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="Images/newspaper-regular.png" Height="30px" Width="30px" Margin="20,0,28,0" />
-                            <TextBlock Text="News"/>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Height="60" Margin="0">
+                            <Image Source='{Binding ImagePath}' Width='30' Height="30" Margin="20,0,28,0"></Image>
+                            <TextBlock Text='{Binding Name}' FontSize="20" Foreground="White" VerticalAlignment="Center"></TextBlock>
                         </StackPanel>
-                    </Button>
-                    <Button Height="60" FontSize="20" Foreground="White" Click="Komedie_Click" >
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="Images/grin-squint-tears-regular.png" Height="30px" Width="30px" Margin="20,0,28,0"/>
-                            <TextBlock Text="Komedie" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBox.Resources>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ListBoxItem">
+                                    <Border BorderThickness="{TemplateBinding Border.BorderThickness}"
+                  Padding="{TemplateBinding Control.Padding}"
+                  BorderBrush="{TemplateBinding Border.BorderBrush}"
+                  Background="#141414"
+                  Name="Bd"
+                  SnapsToDevicePixels="True">
+                                        <ContentPresenter Content="{TemplateBinding ContentControl.Content}"
+                               ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"
+                               ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"
+                               HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}"
+                               VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}"
+                               SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
 
-                        </StackPanel>
+                                        <MultiTrigger>
+                                            <MultiTrigger.Conditions>
+                                                <Condition Property="Selector.IsSelectionActive" Value="False"/>
+                                                <Condition Property="Selector.IsSelected" Value="True"/>
+                                            </MultiTrigger.Conditions>
+                                            <Setter Property="Panel.Background" TargetName="Bd" Value="#FFC200"/>
 
-                    </Button>
-                </StackPanel>   
+                                            <Setter Property="Border.BorderBrush" TargetName="Bd">
+                                                <Setter.Value>
+                                                    <SolidColorBrush>#FFDADADA</SolidColorBrush>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </MultiTrigger>
+
+                                        <MultiTrigger>
+                                            <MultiTrigger.Conditions>
+                                                <Condition Property="Selector.IsSelectionActive" Value="True"/>
+                                                <Condition Property="Selector.IsSelected" Value="True"/>
+                                            </MultiTrigger.Conditions>
+                                            <Setter Property="Panel.Background" TargetName="Bd" Value="#FFC200"/>
+                                            <Setter Property="Border.BorderBrush" TargetName="Bd">
+                                                <Setter.Value>
+                                                    <SolidColorBrush>#FFC200</SolidColorBrush>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </MultiTrigger>
+                                        
+                                        <Trigger Property="UIElement.IsMouseOver" Value="True">
+                                            <Setter Property="Panel.Background" TargetName="Bd" Value="#FFC200"/>
+                                            <Setter Property="Border.BorderBrush" TargetName="Bd">
+                                                <Setter.Value>
+                                                    <SolidColorBrush>#FFC200</SolidColorBrush>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Trigger>
+                                        
+                                        <Trigger Property="UIElement.IsEnabled" Value="False">
+                                            <Setter Property="TextElement.Foreground" TargetName="Bd">
+                                                <Setter.Value>
+                                                    <DynamicResource ResourceKey="{x:Static SystemColors.GrayTextBrushKey}" />
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Trigger>
+                                        
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.Resources>
+
+            </ListBox>
 
 
         </StackPanel>
@@ -131,11 +184,11 @@
             <Border BorderThickness="2" BorderBrush="#FFFFFF" CornerRadius="5">
                 <DockPanel >
                     
-                    <TextBox Style="{StaticResource placeHolder}" Tag="Szukaj..." Name="txtSearch" FontSize="22" Foreground="#FFFFFF" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Margin="12" KeyDown="txtSearch_KeyDown" />
+                    <TextBox Style="{StaticResource placeHolder}" Tag="Szukaj...                                                         " Name="txtSearch" FontSize="22" Foreground="#FFFFFF" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Margin="12" KeyDown="txtSearch_KeyDown" />
 
                     
                         <Button DockPanel.Dock="Right" Height="Auto" Width="49" HorizontalAlignment="Right" Click="Search_Click">
-                            <Image x:Name="iIcon3" Width="30px" Height="30px" Margin="0, 1, 3, 1" Source="Images/grin-squint-tears-regular.png" VerticalAlignment="Center">
+                            <Image x:Name="iIcon3" Width="30px" Height="30px" Margin="0, 1, 3, 1" Source="Images/loupe.png" VerticalAlignment="Center">
 
                                 
                             </Image>
