--- a/MovieTime/View/DataView.xaml
+++ b/MovieTime/View/DataView.xaml
@@ -2,12 +2,50 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:MovieTime.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <DataGrid ItemsSource="{Binding Path=Results, Mode=OneTime}"></DataGrid>
+    <UserControl.Resources>
+        <local:ImagePath x:Key="ImagePath"/>
+    </UserControl.Resources>
+    <Grid Margin="5" >
+        <DataGrid ItemsSource="{Binding Path=Results}"></DataGrid>
+            <ScrollViewer VerticalScrollBarVisibility="Auto" >
+                <ItemsControl ItemsSource="{Binding Path=Results}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Grid Margin="5">
+                                <Image Source="{Binding Converter={StaticResource ImagePath}, Path=Backdrop}" Stretch="UniformToFill"/>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Title}" Foreground="White"/>
+                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Overview}" Foreground="White"/>
+                                </StackPanel>
+                            </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
 
     </Grid>
 </UserControl>
