add new look of film, title, overwiew

--- a/MovieTime/View/DataView.xaml
+++ b/MovieTime/View/DataView.xaml
@@ -9,17 +9,20 @@
     <UserControl.Resources>
         <local:ImagePath x:Key="ImagePath"/>
     </UserControl.Resources>
-    <Grid Margin="5" >
+    <Grid Margin="5,5,5,0" Background="#141414" >
         <DataGrid ItemsSource="{Binding Path=Results}"></DataGrid>
-            <ScrollViewer VerticalScrollBarVisibility="Auto" >
-                <ItemsControl ItemsSource="{Binding Path=Results}">
+
+                <ItemsControl ItemsSource="{Binding Path=Results}" Background="#141414">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel />
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
+                        
                         <DataTemplate>
+                            
+                            
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
@@ -34,18 +37,35 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Grid Margin="5">
-                                <Image Source="{Binding Converter={StaticResource ImagePath}, Path=Backdrop}" Stretch="UniformToFill"/>
-                                    <StackPanel Orientation="Horizontal" Margin="5">
-                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Title}" Foreground="White"/>
-                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Overview}" Foreground="White"/>
-                                </StackPanel>
-                            </Grid>
+                                <StackPanel>
+                                     <Label>
+                                        <StackPanel >
+                                    <TextBlock Text="Title:" Foreground="#FFC200" FontSize="15"/>
+                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Title}" Foreground="White" TextWrapping="WrapWithOverflow"/>
+                                        </StackPanel>
+                                    </Label>
+                                    
+                                    <Grid Background="#141414" ShowGridLines="False" Margin="5">
+                                        <Image Source="{Binding Converter={StaticResource ImagePath}, Path=Backdrop}" Stretch="UniformToFill"/>
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+
+                                        </StackPanel>
+                                    </Grid>
+
+                                    <StackPanel Margin="5,0,5,5">
+                                <TextBlock Text="Overview:" Foreground="#FFC200" FontSize="15"/>
+                                    <TextBlock VerticalAlignment="Bottom" Text="{Binding Overview}" Foreground="White" TextWrapping="WrapWithOverflow"/>
+                                    </StackPanel>
+
+                                </StackPanel>   
+                        
+
+
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
-            </ScrollViewer>
+           
 
     </Grid>
 </UserControl>
