--- a/MovieTime/View/MainWindow.xaml
+++ b/MovieTime/View/MainWindow.xaml
@@ -29,7 +29,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        
+
 
         <Style x:Key="placeHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
             <Setter Property="Template">
@@ -73,24 +73,24 @@
             <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="2" />
             <ColumnDefinition Width="*"/>
-            
+
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="190"/>
             <RowDefinition Height="60" />
-            
+
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
 
-        
-            <StackPanel Grid.Column="0" Grid.RowSpan="3" Margin="0,0,0,0.4" >
-                <StackPanel Height="190" >
+
+        <StackPanel Grid.Column="0" Grid.RowSpan="3" Margin="0,0,0,0.4" >
+            <StackPanel Height="190" >
                 <StackPanel HorizontalAlignment="Center" Height="81" Margin="0,55,0,55" >
-                        <Image Source="/MovieTime;component/Images/film-solid.png" Width="86" Height="60"/>
-                        <Label FontSize="14" Foreground="#FFC200" BorderBrush="#141414" Content="MovieTime" Background="#141414" Height="30" HorizontalContentAlignment="Center"/>
-                    </StackPanel>
+                    <Image Source="/MovieTime;component/Images/film-solid.png" Width="86" Height="60"/>
+                    <Label FontSize="14" Foreground="#FFC200" BorderBrush="#141414" Content="MovieTime" Background="#141414" Height="30" HorizontalContentAlignment="Center"/>
                 </StackPanel>
+            </StackPanel>
             <ListBox Name="listbox1" Grid.Row="0" HorizontalContentAlignment="Left" Width="300" BorderThickness="0" Background="#141414">
 
 
@@ -148,7 +148,7 @@
                                                 </Setter.Value>
                                             </Setter>
                                         </MultiTrigger>
-                                        
+
                                         <Trigger Property="UIElement.IsMouseOver" Value="True">
                                             <Setter Property="Panel.Background" TargetName="Bd" Value="#FFC200"/>
                                             <Setter Property="Border.BorderBrush" TargetName="Bd">
@@ -157,7 +157,7 @@
                                                 </Setter.Value>
                                             </Setter>
                                         </Trigger>
-                                        
+
                                         <Trigger Property="UIElement.IsEnabled" Value="False">
                                             <Setter Property="TextElement.Foreground" TargetName="Bd">
                                                 <Setter.Value>
@@ -165,7 +165,7 @@
                                                 </Setter.Value>
                                             </Setter>
                                         </Trigger>
-                                        
+
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
                             </Setter.Value>
@@ -185,17 +185,17 @@
         <StackPanel Grid.Column="2" Grid.Row="0" Margin="15" VerticalAlignment="Center" MaxWidth="500" Height="60">
             <Border BorderThickness="2" BorderBrush="#FFFFFF" CornerRadius="5">
                 <DockPanel >
-                    
+
                     <TextBox Style="{StaticResource placeHolder}" Tag="Szukaj..." Text="{Binding MovieName}" FontSize="22" Foreground="#FFFFFF" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Margin="12" />
 
-                    
-                        <Button DockPanel.Dock="Right" Height="Auto" Width="49" HorizontalAlignment="Right" Click="Search_Click">
-                            <Image x:Name="iIcon3" Width="30px" Height="30px" Margin="0, 1, 3, 1" Source="../Images/loupe.png" VerticalAlignment="Center">
 
-                                
-                            </Image>
-                        </Button>
-                    
+                    <Button DockPanel.Dock="Right" Height="Auto" Width="49" HorizontalAlignment="Right" Click="Search_Click">
+                        <Image x:Name="iIcon3" Width="30px" Height="30px" Margin="0, 1, 3, 1" Source="../Images/loupe.png" VerticalAlignment="Center">
+
+
+                        </Image>
+                    </Button>
+
                 </DockPanel>
             </Border>
         </StackPanel>
@@ -205,9 +205,9 @@
 
         <ScrollViewer Grid.Column="2" Grid.Row="2" VerticalScrollBarVisibility="Hidden">
             <StackPanel >
-                <Grid Name="Grid"></Grid>
+                <Grid x:Name="Grid"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
-    
+
 </Window>
